--- a/style/_intro.scss
+++ b/style/_intro.scss
@@ -72,7 +72,7 @@ body.hide {
 	transform: translate(-50%, -50%);
 	font-size: 4rem;
 	ul {
-		// @include flex(space-around, center, column);
+		@include flex(space-around, center, column);
 	}
 	li a {
 		color: white;
@@ -96,20 +96,21 @@ body.hide {
 	width: 95%;
 	margin: auto;
 	min-height: 90vh;
+	@include flex(center, center, row);
+	flex-wrap: wrap;
+	margin-bottom: 20rem;
 }
 
 .hero-title {
 	margin: 4rem 2rem;
-	h1,
-	h2 {
+	h1 {
+		font-size: 6rem;
 		text-align: center;
 		margin-bottom: 2rem;
 	}
-	h1 {
-		font-size: 6rem;
-	}
-	h3 {
+	h2 {
 		font-size: 8rem;
+		margin-bottom: 2rem;
 	}
 }
 
