--- a/style/main.css
+++ b/style/main.css
@@ -319,6 +319,49 @@ body.hide {
   background-color: #5dd98a;
 }
 
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #131d1d;
+  padding: 2rem 0;
+  width: 100%;
+}
+
+footer h3 {
+  margin-bottom: 2rem;
+}
+
+.social-icons-footer {
+  padding: 2rem;
+  width: 100%;
+}
+
+.social-icons-footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 .work-section {
   width: 95%;
   margin: auto;
@@ -330,10 +373,18 @@ body.hide {
   margin: 0 0 2rem 2rem;
 }
 
+.work-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(420px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+  grid-gap: 5rem;
+}
+
 .work-card {
   background-color: #272b2e;
   min-height: 50vh;
-  margin: 4rem 0rem;
+  margin: 4rem 2rem;
   padding: 4rem 3rem;
   -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
@@ -385,12 +436,11 @@ body.hide {
       -ms-flex-direction: row;
           flex-direction: row;
   margin: 0 2rem;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .work-card-header img {
   max-width: 10rem;
+  min-width: 8rem;
   margin-bottom: 2rem;
 }
 
@@ -401,7 +451,7 @@ body.hide {
 
 .bg-text {
   position: absolute;
-  top: 0;
+  top: -5%;
   left: 0;
   -webkit-transform: translate(-10%, -50%);
           transform: translate(-10%, -50%);
@@ -410,10 +460,18 @@ body.hide {
   text-align: center;
 }
 
+#work-bg-circle {
+  position: absolute;
+  z-index: -1;
+  top: 40%;
+  right: -50%;
+}
+
 .skills-section {
   width: 95%;
   margin: auto;
   position: relative;
+  margin-bottom: 20rem;
 }
 
 .skills-section h1 {
@@ -424,8 +482,13 @@ body.hide {
   position: relative;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  -ms-grid-columns: (minmax(350px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .skills-card {
@@ -521,6 +584,99 @@ body.hide {
   z-index: -1;
 }
 
+.contact-section {
+  width: 95%;
+  margin: auto;
+  margin-bottom: 10rem;
+}
+
+.contact-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact-wrapper h1 {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.contact-card {
+  background-color: #272b2e;
+  min-height: 50vh;
+  padding: 3rem;
+  border: 7px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to bottom right, #00a295, #5dd98a);
+  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contact-card h3 {
+  text-align: center;
+  margin-bottom: 3rem;
+  color: white;
+}
+
+.contact-card a {
+  font-size: 3rem;
+  color: white;
+  text-align: center;
+}
+
+.contact-card a:hover {
+  text-decoration: underline;
+}
+
+.contact-card p {
+  text-align: center;
+  line-height: 3.6rem;
+}
+
+.about-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.about-header img {
+  margin: 0 2rem 3rem 0;
+}
+
 body.light {
   background-color: #ecfffb;
 }
@@ -535,6 +691,15 @@ body.light {
   color: #353a3e;
 }
 
+.hero-anim.light svg path {
+  stroke: #353a3e;
+}
+
+.bg-text.light {
+  color: #353a3e;
+  opacity: 0.2;
+}
+
 .work-card.light {
   background-color: white;
   border: 1px solid #dbdbdb;
@@ -546,19 +711,42 @@ body.light {
   color: #353a3e;
 }
 
-.skills-card.light {
-  background-color: #ecfffb;
+.skills-card.light,
+.contact-card.light {
+  background-color: white;
 }
 
-.skills-card.light h3 {
-  color: #353a3e;
+.skills-card.light h3,
+.skills-card.light p,
+.skills-card.light a,
+.contact-card.light h3,
+.contact-card.light p,
+.contact-card.light a {
+  color: black;
+}
+
+.skills-card.light .top-icon .icon-bg {
+  background-color: black;
 }
 
 .icons-collection.light svg path {
-  fill: #353a3e;
+  fill: black;
 }
 
-.toggle-appearance.light svg #toggle-bg {
+.toggle-appearance.light svg path {
   fill: white;
+}
+
+.contact-wrapper.light h1 {
+  color: #353a3e;
+}
+
+@media screen and (min-width: 1000px) {
+  .contact-card {
+    max-width: 50%;
+  }
+  .social-icons-footer {
+    width: 50%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
