--- a/style/main.scss
+++ b/style/main.scss
@@ -32,7 +32,13 @@ $green2: #5dd98a;
 	box-shadow: 0px 3px 6px rgba($color: #000000, $alpha: 0.2);
 }
 
+@mixin width($width) {
+	width: $width;
+	margin: auto;
+}
+
 @import "global";
-@import "intro";
+@import "header_footer";
 @import "body";
 @import "active";
+@import "media";
