--- a/style/_media.scss
+++ b/style/_media.scss
@@ -5,4 +5,14 @@
 	.social-icons-footer {
 		width: 50%;
 	}
+	.skills-section,
+	.work-section,
+	.contact-section {
+		height: 100vh;
+		margin-bottom: 20rem;
+	}
+	.skills-section,
+	.work-section {
+		@include width(60%);
+	}
 }
