--- a/style/main.css
+++ b/style/main.css
@@ -269,6 +269,24 @@ body.hide {
   margin-bottom: 20rem;
 }
 
+.hero-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .hero-title {
   margin: 4rem 2rem;
 }
@@ -284,10 +302,16 @@ body.hide {
   margin-bottom: 2rem;
 }
 
-.hero-anim {
+.hero-anim-section {
   position: relative;
-  width: 80%;
-  margin: auto;
+}
+
+.hero-anim {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -747,6 +771,17 @@ body.light {
   }
   .social-icons-footer {
     width: 50%;
+  }
+  .skills-section,
+  .work-section,
+  .contact-section {
+    height: 100vh;
+    margin-bottom: 20rem;
+  }
+  .skills-section,
+  .work-section {
+    width: 60%;
+    margin: auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
