--- a/style/_body.scss
+++ b/style/_body.scss
@@ -55,12 +55,9 @@
 }
 
 .bg-text {
-	position: absolute;
-	top: -5%;
-	left: 0;
-	transform: translate(-10%, -50%);
+	text-align: center;
 	opacity: 0.1;
-	font-size: 20rem;
+	font-size: 15rem;
 	text-align: center;
 }
 
