--- a/style/_media.scss
+++ b/style/_media.scss
@@ -8,7 +8,7 @@
 	.skills-section,
 	.work-section,
 	.contact-section {
-		height: 100vh;
+		// height: 100vh;
 		margin-bottom: 20rem;
 	}
 	.skills-section,
