--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -3,7 +3,7 @@
 nav {
 	min-height: 5vh;
 	background: linear-gradient(to right, $green1, $green2);
-	@include shadow();
+	// @include shadow();
 }
 
 #logo {
@@ -19,6 +19,7 @@ nav {
 	height: 100%;
 	width: 100%;
 	clip-path: circle(50px at 100% -10%);
+	display: none;
 }
 
 .nav-header {
@@ -113,20 +114,18 @@ body.hide {
 //HERO SECTION
 
 .hero-section {
-	width: 95%;
-	margin: auto;
+	@include width(95%);
 	min-height: 90vh;
-	@include flex(center, center, row);
-	flex-wrap: wrap;
 	margin-bottom: 20rem;
 }
 
 .hero-wrapper {
-	@include flex(center, space-between, row);
+	@include flex(space-between, center, column);
 	flex-wrap: wrap;
 }
 
 .hero-title {
+	flex: 1 1 20rem;
 	margin: 4rem 2rem;
 	h1 {
 		font-size: 6rem;
@@ -139,13 +138,9 @@ body.hide {
 	}
 }
 .hero-anim-section {
-	position: relative;
+	flex: 1 1 20rem;
 }
 .hero-anim {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 	@include flex(center, center, column);
 }
 
@@ -172,6 +167,7 @@ footer {
 	width: 100%;
 	h3 {
 		margin-bottom: 2rem;
+		color: white;
 	}
 }
 
