--- a/style/main.css
+++ b/style/main.css
@@ -81,8 +81,6 @@ nav {
   min-height: 5vh;
   background: -webkit-gradient(linear, left top, right top, from(#00a295), to(#5dd98a));
   background: linear-gradient(to right, #00a295, #5dd98a);
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 #logo {
@@ -100,6 +98,7 @@ nav {
   width: 100%;
   -webkit-clip-path: circle(50px at 100% -10%);
           clip-path: circle(50px at 100% -10%);
+  display: none;
 }
 
 .nav-header {
@@ -251,21 +250,6 @@ body.hide {
   width: 95%;
   margin: auto;
   min-height: 90vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   margin-bottom: 20rem;
 }
 
@@ -273,21 +257,24 @@ body.hide {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: space-between;
-      -ms-flex-align: space-between;
-          align-items: space-between;
-  -webkit-box-orient: horizontal;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
 .hero-title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 20rem;
+          flex: 1 1 20rem;
   margin: 4rem 2rem;
 }
 
@@ -303,15 +290,12 @@ body.hide {
 }
 
 .hero-anim-section {
-  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 20rem;
+          flex: 1 1 20rem;
 }
 
 .hero-anim {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -364,6 +348,7 @@ footer {
 
 footer h3 {
   margin-bottom: 2rem;
+  color: white;
 }
 
 .social-icons-footer {
@@ -474,13 +459,9 @@ footer h3 {
 }
 
 .bg-text {
-  position: absolute;
-  top: -5%;
-  left: 0;
-  -webkit-transform: translate(-10%, -50%);
-          transform: translate(-10%, -50%);
+  text-align: center;
   opacity: 0.1;
-  font-size: 20rem;
+  font-size: 15rem;
   text-align: center;
 }
 
@@ -705,6 +686,10 @@ body.light {
   background-color: #ecfffb;
 }
 
+.nav-links.light ul li a {
+  color: black;
+}
+
 .hero-title.light {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
@@ -775,7 +760,6 @@ body.light {
   .skills-section,
   .work-section,
   .contact-section {
-    height: 100vh;
     margin-bottom: 20rem;
   }
   .skills-section,
