MASTER: UI mobile test: removed indicators bg svg's

--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -19,7 +19,7 @@ nav {
 	height: 100%;
 	width: 100%;
 	clip-path: circle(50px at 100% -10%);
-	display: none;
+	// display: none;
 }
 
 .nav-header {
