--- a/style/_media.scss
+++ b/style/_media.scss
@@ -5,6 +5,9 @@
 	.social-icons-footer {
 		width: 50%;
 	}
+	.hero-section {
+		min-height: 60vh;
+	}
 	.skills-section,
 	.work-section,
 	.contact-section {
