--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -3,7 +3,7 @@
 nav {
 	min-height: 5vh;
 	background: linear-gradient(to right, $green1, $green2);
-	// @include shadow();
+	@include shadow();
 }
 
 #logo {
@@ -114,23 +114,35 @@ body.hide {
 //HERO SECTION
 
 .hero-section {
-	@include width(95%);
-	min-height: 90vh;
-	margin-bottom: 20rem;
+	min-height: 80vh;
+	margin-bottom: 5rem;
+	background-image: linear-gradient(
+			to bottom,
+			rgba(255, 255, 255, 0.3),
+			rgba(0, 0, 0, 0.8)
+		),
+		url("../img/Polygon6.png");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	overflow-x: hidden;
 }
 
 .hero-wrapper {
-	@include flex(space-between, center, column);
+	@include width(80%);
+	@include flex(center, center, row);
 	flex-wrap: wrap;
 }
 
 .hero-title {
+	@include flex(center, center, column);
 	flex: 1 1 20rem;
 	margin: 4rem 2rem;
 	h1 {
 		font-size: 6rem;
-		text-align: center;
+		text-align: left;
 		margin-bottom: 2rem;
+		margin-top: 4rem;
 	}
 	h2 {
 		font-size: 7rem;
@@ -164,6 +176,7 @@ footer {
 	@include flex(center, center, column);
 	background-color: #131d1d;
 	padding: 2rem 0;
+	overflow-x: hidden;
 	width: 100%;
 	h3 {
 		margin-bottom: 2rem;
