--- a/style/_header_footer.scss
+++ b/style/_header_footer.scss
@@ -18,7 +18,7 @@ nav {
 	background: linear-gradient(to bottom right, $green1, $green2);
 	height: 100%;
 	width: 100%;
-	clip-path: circle(50px at 100% -10%);
+	clip-path: circle(5px at 100% -10%);
 	// display: none;
 }
 
@@ -116,12 +116,12 @@ body.hide {
 .hero-section {
 	min-height: 80vh;
 	margin-bottom: 5rem;
-	background-image: linear-gradient(
-			to bottom,
-			rgba(255, 255, 255, 0.3),
-			rgba(0, 0, 0, 0.8)
-		),
-		url("../img/Polygon6.png");
+	// background-image: linear-gradient(
+	// 		to bottom,
+	// 		rgba(0, 0, 0, 0.8),
+	// 		rgba(71, 71, 71, 0.8)
+	// 	),
+	// 	url("../img/Polygon6.png");
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
